@@ -1,3 +1,8 @@
+2004-08-03 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/SDCCloop.c (loopInvariants): fixed bug 983545, hope this
+	  doesn't disable too much optimizations
+
 2004-08-02 Slade Rich <slade_rich AT users.sourceforge.net>
 
 	* src/pic/glue.c Disabled "WARNING: function 'main' undefined" when -S option is used.
